; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ntlm.c_gen_hmac_md5.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ntlm.c_gen_hmac_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"MD5\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @gen_hmac_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gen_hmac_md5(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = call i32* @md_kt_get(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32* %13, i32** %11, align 8
  %14 = call i32* (...) @hmac_ctx_new()
  store i32* %14, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32*, i32** %11, align 8
  %19 = call i32 @hmac_ctx_init(i32* %15, i32* %16, i32 %17, i32* %18)
  %20 = load i32*, i32** %12, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @hmac_ctx_update(i32* %20, i32* %21, i32 %22)
  %24 = load i32*, i32** %12, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @hmac_ctx_final(i32* %24, i32* %25)
  %27 = load i32*, i32** %12, align 8
  %28 = call i32 @hmac_ctx_cleanup(i32* %27)
  %29 = load i32*, i32** %12, align 8
  %30 = call i32 @hmac_ctx_free(i32* %29)
  ret void
}

declare dso_local i32* @md_kt_get(i8*) #1

declare dso_local i32* @hmac_ctx_new(...) #1

declare dso_local i32 @hmac_ctx_init(i32*, i32*, i32, i32*) #1

declare dso_local i32 @hmac_ctx_update(i32*, i32*, i32) #1

declare dso_local i32 @hmac_ctx_final(i32*, i32*) #1

declare dso_local i32 @hmac_ctx_cleanup(i32*) #1

declare dso_local i32 @hmac_ctx_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
